# neuromcp

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.cwa/: cwa.db  cwa.db-shm  cwa.db-wal
crawler/: __init__.py  __main__.py  chunking.py  classifier.py  cli.py  config.py  database.py  embeddings.py  fetcher.py  models.py  ontology.py  pipeline.py  sample_corpus.py  search.py
graphrag/: __init__.py  retriever.py
mcp_server/: __init__.py  server.py
ontologia/: ontologia_neurodivergencia.json
scripts/: mcp_ngrok.sh  run_local.sh
tests/: test_classifier.py  test_embeddings_chunking.py  test_graphrag_offline.py  test_integration_neo4j.py  test_mcp_server.py  test_ontology.py
