[project]
name = "neuromcp-crawler"
version = "0.1.0"
description = "Crawler inteligente para ontologia de neurodivergência com armazenamento no Neo4j"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.25.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "trafilatura>=1.12.0",
    "pydantic>=2.8.0",
    "duckduckgo-search>=6.2.0",
    "unidecode>=1.3.8",
    "rich>=13.7.0",
    "tenacity>=8.5.0",
]

[project.scripts]
crawler = "crawler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
